# GooglePhotoMetadataFixer

./: .gitignore  README.md  pyproject.toml  requirements.txt
google_photos_metadata_fixer/: __init__.py  __main__.py  cli.py  exiftool_writer.py  file_matcher.py  metadata_writer.py
